# kubetui

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  cspell.json  renovate.json  rustfmt.toml  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml  test.yml  upload-artifact.yml
.guppy/: hakari.toml
ansi/: Cargo.toml
ansi/src/: lib.rs  parser.rs
clipboard-wrapper/: Cargo.toml
clipboard-wrapper/src/: lib.rs
component/: Cargo.toml
component/src/: input.rs  multiple_select.rs  select.rs  single_select.rs
docs/plans/: 2026-02-22-log-buffer-limit-design.md  2026-02-22-log-buffer-limit-plan.md  2026-04-06-error-handling-plan.md  2026-04-07-worker-result-refactoring-plan.md
docs/superpowers/plans/: 2026-04-05-namespace-config-fallback-plan.md  2026-04-11-error-display-refactor-plan.md  2026-05-23-node-tab-list.md  2026-05-25-node-tab-columns-dialog.md  2026-05-26-node-tab-detail-pane.md  2026-05-26-node-tab-label-columns.md  2026-05-27-node-filter-applicator.md  2026-05-27-table-filter-applicator.md  2026-05-29-table-filter-header-aware-validation.md  2026-05-29-table-filter-inactive-terms.md  2026-05-30-shared-table-filter-parser.md  2026-05-31-pod-column-aware-filter.md  2026-05-31-pod-label-columns.md  2026-06-03-config-label-columns.md  2026-06-03-log-query-multi-namespace-notice.md  2026-06-03-network-label-columns.md
docs/superpowers/specs/: 2026-04-05-namespace-config-fallback-design.md  2026-04-06-error-handling-design.md  2026-04-07-worker-result-refactoring-design.md  2026-04-11-error-display-refactor-design.md  2026-05-22-node-tab-design.md  2026-05-27-table-filter-redesign.md  2026-05-29-shared-table-filter-parser-design.md  2026-05-29-table-filter-header-aware-validation-design.md  2026-05-29-table-filter-inactive-terms-design.md  2026-05-31-pod-label-columns-design.md  2026-06-03-config-network-label-columns-design.md  2026-06-03-log-query-multi-namespace-notice-design.md
event/: Cargo.toml
event/src/: error.rs  input.rs  kubernetes.rs  lib.rs  tick.rs  util.rs
event/src/kubernetes/: api_resources.rs  client.rs  config.rs  context.rs  event.rs  log.rs  metric_type.rs  mod.rs  pod.rs  request.rs  v1_table.rs  worker.rs  yaml.rs
example/: complete.yaml  config.yaml  container-state.yaml  deployment.yaml  error.yaml  multi-container.yaml  running.yaml  select.rs  simple.yaml
example/manifests/: error.yaml  running.yaml
examples/: new_text.rs  stack_view.rs  widget_config.rs
examples/manifests/: configmap.yaml  container-state.yaml  ingress.yaml  multi-container.yaml  network-policy.yaml  running.yaml
script/: decode-helm-secret.applescript  decode-helm-secret.scpt  demo.applescript  demo.scpt  dynamic-column-selection-reorder.applescript  dynamic-column-selection.applescript  generate_gateway_api.sh  log-query.applescript  log-query.scpt  toggle-split-direction.applescript  yaml-popup.applescript  yaml-popup.scpt
select-view/: Cargo.toml
shell-completion/: _kubetui.zsh  kubetui.bash  kubetui.zsh
src/: action.rs  ansi.rs  app.rs  clipboard.rs  clipboard_wrapper.rs  cmd.rs  config.rs  context.rs  draw.rs  error.rs  event.rs  features.rs  kube.rs  lib.rs  log.rs  logging.rs  main.rs  message.rs  signal.rs  sub_window.rs  theme.rs  tui_wrapper.rs  ui.rs  util.rs  window.rs  workers.rs
src/ansi/: parser.rs
src/clipboard/: generic.rs  linux.rs  osc52.rs  system.rs
src/cmd/: args.rs  command.rs  completion.rs  subcommand.rs
src/cmd/args/: all_namespaces.rs  clipboard_mode.rs  node_columns.rs  pod_columns.rs  split_direction.rs
src/config/: theme.rs
src/config/theme/: api.rs  base.rs  border.rs  check_list.rs  config.rs  dialog.rs  error.rs  event.rs  filter.rs  header.rs  help.rs  input.rs  label_column.rs  list.rs  network.rs  node.rs  pod.rs  style.rs  tab.rs  table.rs  text.rs  widget.rs  yaml.rs
src/event/: input.rs  kubernetes.rs  mod.rs  tick.rs  util.rs
src/event/kubernetes/: api_resources.rs  client.rs  color.rs  config.rs  event.rs  log.rs  log2.rs  network.rs  pod.rs  v1_table.rs  worker.rs  yaml.rs
src/features/: api_resources.rs  component_id.rs  config.rs  context.rs  event.rs  help.rs  network.rs  node.rs  pod.rs  styled_api_resource.rs  yaml.rs
src/features/api_resources/: kube.rs  message.rs  view.rs
src/features/config/: columns.rs  filter.rs  kube.rs  message.rs
src/features/context/: message.rs  view.rs
src/features/event/: kube.rs  (+1 more)
src/kube/: apis.rs  auth.rs  client.rs  context.rs  proxy.rs  table.rs
src/theme/: component.rs  style.rs
src/tui_wrapper/: event.rs  tab.rs  util.rs  widget.rs  window.rs
src/ui/: callback.rs  dialog.rs  event.rs  popup.rs  tab.rs  util.rs  widget.rs  window.rs
src/view/: mod.rs  pane.rs  popup.rs  status.rs  tab.rs  window.rs
src/widget/: log.rs  mod.rs  namespace.rs  pod.rs  text.rs
src/window/: api.rs  config.rs  context.rs  event.rs  help.rs  list.rs  mod.rs  network.rs  pod.rs  yaml.rs  yaml_popup.rs
src/workers/: kube.rs  kubernetes.rs  render.rs  tick.rs  user_input.rs
sub-window/: Cargo.toml
sub-window/src/: lib.rs
test/: japanese.yaml  select.rs  text-color.yaml
test/manifests/: complete.yaml  configmap.yaml  cronjob.yaml  ingress.yaml  regex.yaml  restart.yaml  running.yaml  secret.yaml  simple.yaml  test-log-filtering.yaml
test/rbac-test/: config.yaml  kubeconfig.yaml  setup.yaml
tui-paragraph2/: Cargo.toml
tui-paragraph2/src/: lib.rs  reflow.rs
tui-wrapper/: Cargo.toml
tui-wrapper/examples/: stack_view.rs  widget_config.rs
tui-wrapper/src/: event.rs  lib.rs  pane.rs  select.rs  sub_window.rs  tab.rs  util.rs  window.rs
tui-wrapper/src/complex_widgets/: input.rs  mod.rs  multiple_select.rs  single_select.rs
tui-wrapper/src/view/: mod.rs  pane.rs  popup.rs  select.rs  sub_window.rs  tab.rs  window.rs
tui-wrapper/src/widget/: ansi.rs  ansi_color.rs  config.rs  list.rs  mod.rs  spans.rs  stack.rs  table.rs  text.rs  wrap.rs
tui-wrapper/src/widget/complex/: input.rs  mod.rs  multiple_select.rs  single_select.rs  stack.rs
workspace-hack/: Cargo.toml
(+374 files in other folders)
