[package]
name = "ansi"
version = "0.1.0"
authors = ["sarub0b0 <ekr59uv25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
workspace-hack = { path = "../workspace-hack"}

[dev-dependencies]
pretty_assertions = "1.0.0"
