[package]
name = "event"
version = "0.1.0"
authors = ["sarub0b0 <ekr59uv25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
kube = "0.50.0"
kube-runtime = "0.50.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
futures = "0.3.12"
bytes = "1"
crossbeam = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }

