[package]
name = "event"
version = "0.1.0"
authors = ["sarub0b0 <ekr59uv25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
kube = "0.52"
kube-runtime = "0.52"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
futures = "0.3"
bytes = "1"
crossbeam = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
http = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.7"
