[package]
name = "event"
version = "0.1.0"
authors = ["sarub0b0 <ekr59uv25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
logging = [ "log" ]
mock = []
mock-failed = [ "hyper" ]
new-log-stream = []

[dependencies]
crossterm = "0.19"
kube = "0.57"
kube-runtime = "0.57"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_20"] }
futures = "0.3"
bytes = "1"
crossbeam = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
http = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

log = { version = "0.4", optional = true }
hyper = { version = "0.14", optional = true }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
pretty_assertions = "0.7"
