[package]
name = "select-view"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", default-features = false, features = ['crossterm'] }

[dev-dependencies]
pretty_assertions = "0.7"
