[package]
name = "sub-window"
version = "0.1.0"
authors = ["sarub0b0 <ekr59uv25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { git = "https://github.com/sarub0b0/tui-rs.git" }
tui-wrapper = { path = "../tui-wrapper" }
component = { path = "../component" }
