[package]
name = "tui-wrapper"
version = "0.1.0"
authors = ["sarub0b0 <ekr59uv25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { git = "https://github.com/sarub0b0/tui-rs.git" }
# tui = { version = "0.14", default-features = false, features = ['crossterm'] }
ansi = { path = "../ansi" }
unicode-segmentation = "1.7"
unicode-width = "0.1"
rayon = "1.5"
fuzzy-matcher = "0.3"
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "0.7.1"
