[package]
name = "tui-wrapper"
version = "0.1.0"
authors = ["sarub0b0 <ekr59uv25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
logging = [ "log" ]


[dependencies]
tui = { git = "https://github.com/sarub0b0/tui-rs.git", features = ["crossterm"], default-features = false }
ansi = { path = "../ansi" }
unicode-segmentation = "1.8"
unicode-width = "0.1"
rayon = "1.5"
crossterm = "0.22.1"
derivative = "2.2"
fuzzy-matcher = "0.3"
chrono = "0.4"
enum_dispatch = "0.3"

clipboard-wrapper = { path = "../clipboard-wrapper" }
event = { path = "../event" }

log = { version = "0.4", optional = true }
workspace-hack = { path = "../workspace-hack"}

[dev-dependencies]
pretty_assertions = "1.0"
